# IT643-software-design-and-testing

./: README.md
code/design_for_testability/observability/better_design/: order_processor_observable.h  order_processor_observable_test.cpp
code/design_for_testability/observability/not_so_good_design/: order_processor.h  (+1 more)
code/lecture10_11/: cp.c
code/lecture2/: vector2d_class.cpp
code/lecture2/generic/: main.cpp
code/lecture2/modular/: vector2D.cpp  vector2D.h
code/lecture2/oop/: main.cpp  vector2d.cpp  vector2d.h
code/lecture3/generic/: a.out  vector.h
code/lecture3/modular/: a.out  main.cpp
code/lecture3/procedural/: a.out  vector2d_struct.c
code/mock_stubs/: CMakeLists.txt  README.md
code/mock_stubs/lib/: mail_service.hpp  order.hpp  warehouse.hpp
code/mock_stubs/tests/: order_test.cpp  order_test_manual.cpp  order_test_real_objects.cpp
code/refactoring/example1/: README.md  expected.txt
code/specification_testing/src/: main.cpp  string_adder.h  string_adder_main.cpp  substrings_between.h
code/specification_testing/tests/: string_adder_test.cpp  string_between_test.cpp  substring_between_test.cpp
exercise/exercise1/smelly/: README.md
exercise/exercise2/smelly/: README.md
exercise/exercise3/smelly/: README.md
lectures/: Lecture 2.md  Lecture 3.md  Lecture 4.md  lecture10_11.md  lecture12_13.md  lecture14.md  lecture15_16_17.md  lecture18.md  lecture19.md  lecture20.md  lecture20_21.md  lecture22_23.md  lecture24_25.md  lecture3.md  lecture4.md  lecture5.md  lecture6.md  lecture7.ipynb  lecture8.md  lecture9.md
(+10 files in other folders)
